--- a/src/404.html
+++ b/src/404.html
@@ -54,7 +54,7 @@
 </head>
 
 <body>
-  <h1>Page Not Found</h1>
+  <h1>Page Not Found - Noor</h1>
   <p>Sorry, but the page you were trying to view does not exist.</p>
 </body>
 
