--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,27 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <div class="logo">
+    <img src="img/exlabs-logo.svg" />
+  </div>
+  <div class="first-section">
+    <div class="left-column">
+      <h1>
+        AWS Security
+      </h1>
+      <h2 class="bigger">
+        Assessment
+      </h2>
+      <p class="highlighted">How do you accelerate the value from going Cloud Native?</p>
+      <p>
+        Reveal where your organisation is strategically, culturally and technically. With this in-depth and holistic approach, we give the unique and urgent insight that creates the clarity, confidence and certainty needed to accelerate your Cloud Native journey.
+      </p>
+      <button>Speak with out experts</button>
+    </div>
+    <div>
+      <img src="img/Frame.svg" />
+    </div>
+  </div>
   <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
   <script src="js/app.js"></script>
 
