--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
       <button>Speak with out experts</button>
     </div>
     <div>
-      <img src="img/Frame.svg" />
+      <img src="img/Frame.svg" style="width: 100%"/>
     </div>
   </div>
   <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
