Bugstacker: Added the author, robots/web-crawlers and the twitter social media card meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,23 @@
   <meta charset="utf-8">
   <title></title>
   <meta name="description" content="">
+  <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
+
+  <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="notranslate">
+
+  <meta name="twitter:card" content="summary_large_page">
+  <meta name="twitter:site" content="@handle">
+  <meta name="twitter:creator" content="@handle">
+  <meta name="twitter:title" content="">
+  <meta name="twitter:description" content="">
+  <meta name="twitter:image" content="">  
 
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
