--- a/src/404.html
+++ b/src/404.html
@@ -53,6 +53,10 @@
   </style>
 </head>
 
+<body>
+  <h1>Page Not Found</h1>
+  <p>Git and GitHub Masterclass page does not exist.</p>
+</body>
 
 </html>
 <!-- IE needs 512+ bytes: https://docs.microsoft.com/archive/blogs/ieinternals/friendly-http-error-pages -->
