--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 <body>
 
   <!-- Add your site or application content here -->
+<!--  TODO: get Google Analytics code  -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
   <script src="js/app.js"></script>
