--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
+  <p>Hola a todos, mi nombre es Miguel Angel</p>
   <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
   <script src="js/app.js"></script>
 
