--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <p>Hello world! This is HTML5 Boilerplate v2.</p>
   <script src="js/app.js"></script>
 
 </body>
