--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 <body>
 
   <!-- Add your site or application content here -->
+   <h1>Essai Git/Github</h1>
   <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/app.js"></script>
 
