--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
   <!-- Add your site or application content here -->
    <h1>Essai Git/Github</h1>
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <p>C'est pas si simple</p>
   <script src="js/app.js"></script>
 
 </body>
