added a darkmode dependency

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dark Mode Example</title>
+  <title></title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
 
@@ -26,9 +26,8 @@
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
-  <button id="dark-mode-toggle">Toggle Dark Mode</button>
-  
   <script src="js/app.js"></script>
+
 </body>
 
 </html>
