--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,9 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam architecto
+    adipisci reiciendis dolores autem quasi aut quos doloribus, esse assumenda nihil,
+     perferendis fugiat suscipit placeat voluptatibus consectetur vel officiis quaerat?</p>
   <script src="js/app.js"></script>
 
 </body>
