Added theme color meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title></title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
+  <meta name="theme-color" content="#3c790a">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
