Add contributor info section to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,17 @@
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
+  <!-- Contributor Info Section added by Krish -->
+<section id="contributor-info" style="background:#f0f8ff; padding:20px; margin-top:30px; border-radius:8px;">
+  <h2>💡 Open Source Contributor Info</h2>
+  <p><strong>Name:</strong> Krish</p>
+  <p><strong>GitHub:</strong> <a href="https://github.com/Krish-afk-bot" target="_blank">github.com/Krish-afk-bot</a></p>
+  <p><strong>Email:</strong> krish@example.com</p>
+  <p><strong>Goals:</strong> Master web development & open source contributions!</p>
+  <p><strong>Skills:</strong> HTML, CSS, JavaScript, Git</p>
+  <p>Thank you for reviewing my pull request! 😊</p>
+</section>
+
   <script src="js/app.js"></script>
 
 </body>
