--- a/src/404.html
+++ b/src/404.html
@@ -12,7 +12,7 @@
     }
 
     html {
-      color: #888;
+      color: #888888;
       display: table;
       font-family: sans-serif;
       height: 100%;
@@ -54,8 +54,8 @@
 </head>
 
 <body>
-  <h1>Page Not Found</h1>
-  <p>Sorry, but the page you were trying to view does not exist.</p>
+  <h1>Keep looking</h1>
+  <p>Sorry, but the page you were trying to view does not exist. I think</p>
 </body>
 
 </html>
