--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>test PR</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
 
