added a title and changed the paragraph

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>This is an updated page</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
 
@@ -25,7 +25,7 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <p>Hello world! This is HTML5 Boilerplate. This is an updated version</p>
   <script src="js/app.js"></script>
 
 </body>
