--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,36 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>HTML5 Boilerplate – Modern Demo</title>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Welcome to HTML5 Boilerplate</h1>
+      <p>A fast, robust, and adaptable web foundation.</p>
+    </header>
 
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
+    <main>
+      <section class="intro">
+        <h2>Build with Modern Web Standards</h2>
+        <p>
+          This demo showcases semantic HTML, Flexbox, and accessibility-friendly design.
+        </p>
+        <button>Learn More</button>
+      </section>
+    </main>
 
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
-</head>
+    <footer>
+      <p>Made with ❤️ using HTML5 Boilerplate</p>
+    </footer>
 
-<body>
-
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
-
-</body>
-
+    <script src="js/main.js"></script>
+  </body>
 </html>
